# cosmicpython

./: .envrc.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  conftest.py  docker-compose.yml  pyproject.toml
cosmicpython/: api.py  config.py  models.py  orm.py  repository.py  services.py
cosmicpython/adapters/: orm.py  repository.py
cosmicpython/domain/: events.py  models.py
cosmicpython/endpoints/: api.py
cosmicpython/service_layer/: email.py  handlers.py  message_bus.py  services.py  unit_of_work.py
tests/: conftest.py  test_api.py  test_model.py  test_repository.py  test_services.py  test_utils.py
tests/e2e/: test_api.py
tests/integration/: test_repository.py  test_uow.py
tests/unit/: test_handlers.py  test_product.py
