[project]
name = "cosmicpython"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = "<4.0.0,>=3.13"
dependencies = [
  "sqlalchemy (>=2.0,<3.0)",
  "fastapi[standard]>=0.115.6,<0.116.0",
  "pydantic (>=2.10.5,<3.0.0)",
  "psycopg2 (>=2.9.10,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.uv]
dev-dependencies = [
  "pytest (>=8.3.0)",
  "black (>=24.10.0)",
  "pytest-testmon (>=2.1.3)",
  "pytest-watcher (>=0.4.3)",
  "requests (>=2.32.3)",
  "alembic (==1.14.0)"
]

[tool.pytest-watcher]
now = false
clear = true
delay = 0.2
runner = "pytest"
runner_args = []
patterns = ["*.py"]
ignore_patterns = []

[tool.poetry.group.dev.dependencies]
isort = "^6.0.0"

